--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -23,7 +23,7 @@
             margin-bottom: 20px;
         }
         video {
-            max-width: 300px;
+          max-width: 300px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -82,6 +82,7 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
+        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -169,6 +170,7 @@
                             unlikedUsers[senderId]++;
                         }
                         updateUnlikesCount(senderId);
+
                     }
                 });
             });
@@ -207,11 +209,11 @@
             if (device === 'iOS') {
                 if (videoDevices.length > 1) {
                     cameraSelect.innerHTML = `
-                        <option value="${videoDevices[0].deviceId}">Caméra avant</option>
-                        <option value="${videoDevices[1].deviceId}">Caméra arrière</option>
+                        <option value="${videoDevices[0].deviceId}">Caméra 1</option>
+                        <option value="${videoDevices[1].deviceId}">Caméra 2</option>
                     `;
                 } else {
-                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra avant</option>`;
+                    cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
                 }
             } else if (device === 'Android') {
                 if (videoDevices.length > 1) {
@@ -273,101 +275,100 @@
             }
         }
 
+        function addRemoteVideo(peerId, stream) {
+            const existingVideo = document.getElementById(peerId);
+            if (existingVideo) {
+                existingVideo.srcObject = stream;
+                return;
+            }
+
+            const videoElement = document.createElement('video');
+            videoElement.id = peerId;
+            videoElement.autoplay = true;
+            videoElement.playsInline = true;
+            videoElement.srcObject = stream;
+            videoContainer.appendChild(videoElement);
+
+            const controls = document.createElement('div');
+            controls.classList.add('controls');
+            const likeButton = document.createElement('button');
+            likeButton.classList.add('like-button');
+            likeButton.textContent = '❤️';
+            controls.appendChild(likeButton);
+
+            const unlikeButton = document.createElement('button');
+            unlikeButton.classList.add('unlike-button');
+            unlikeButton.textContent = '⚡';
+            controls.appendChild(unlikeButton);
+
+            const likeCount = document.createElement('p');
+            likeCount.classList.add('likes-count');
+            likeCount.textContent = 'Likes reçus: 0';
+            controls.appendChild(likeCount);
+
+            const unlikeCount = document.createElement('p');
+            unlikeCount.classList.add('unlikes-count');
+            unlikeCount.textContent = 'Unlikes reçus: 0';
+            controls.appendChild(unlikeCount);
+
+            videoContainer.appendChild(controls);
+
+            likeButton.addEventListener('click', () => {
+                sendSignalToPeer(peerId, 'like');
+            });
+
+            unlikeButton.addEventListener('click', () => {
+                sendSignalToPeer(peerId, 'unlike');
+            });
+        }
+
+        function sendSignalToPeer(peerId, type) {
+            const conn = peer.connections[peerId][0];
+            if (conn) {
+                conn.send({ type });
+            }
+        }
+
         function updateLikesCount(peerId) {
-            const peer = peerConnections[peerId];
-            if (peer) {
-                const likeCount = peer.querySelector('.likes-count');
+            const videoElement = document.getElementById(peerId);
+            const likeCount = videoElement.parentElement.querySelector('.likes-count');
+            if (likeCount) {
                 likeCount.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
             }
         }
 
         function updateUnlikesCount(peerId) {
-            const peer = peerConnections[peerId];
-            if (peer) {
-                const unlikeCount = peer.querySelector('.unlikes-count');
+            const videoElement = document.getElementById(peerId);
+            const unlikeCount = videoElement.parentElement.querySelector('.unlikes-count');
+            if (unlikeCount) {
                 unlikeCount.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-            }
-        }
-
-        function addRemoteVideo(peerId, stream) {
-            const remoteVideo = document.createElement('video');
-            remoteVideo.srcObject = stream;
-            remoteVideo.autoplay = true;
-            remoteVideo.playsinline = true;
-            remoteVideo.className = 'remote-video';
-
-            const remoteContainer = document.createElement('div');
-            remoteContainer.className = 'video-wrapper';
-            remoteContainer.id = `peer-${peerId}`;
-            remoteContainer.appendChild(remoteVideo);
-
-            const controls = document.createElement('div');
-            controls.className = 'controls';
-
-            const likeButton = document.createElement('button');
-            likeButton.className = 'like-button';
-            likeButton.textContent = '❤️';
-            likeButton.onclick = () => sendLike(peerId);
-
-            const likeCount = document.createElement('p');
-            likeCount.className = 'likes-count';
-            likeCount.textContent = `Likes reçus: ${likedUsers[peerId] || 0}`;
-
-            const unlikeButton = document.createElement('button');
-            unlikeButton.className = 'unlike-button';
-            unlikeButton.textContent = '⚡';
-            unlikeButton.style.display = 'none';
-            unlikeButton.onclick = () => sendUnlike(peerId);
-
-            const unlikeCount = document.createElement('p');
-            unlikeCount.className = 'unlikes-count';
-            unlikeCount.textContent = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
-
-            controls.appendChild(likeButton);
-            controls.appendChild(likeCount);
-            controls.appendChild(unlikeButton);
-            controls.appendChild(unlikeCount);
-
-            remoteContainer.appendChild(controls);
-            videoContainer.appendChild(remoteContainer);
-
-            peerConnections[peerId] = remoteContainer;
-        }
-
-        function sendLike(peerId) {
-            const conn = peer.connections[peerId][0];
-            if (conn) {
-                conn.send({ type: 'like' });
-            }
-        }
-
-        function sendUnlike(peerId) {
-            const conn = peer.connections[peerId][0];
-            if (conn) {
-                conn.send({ type: 'unlike' });
             }
         }
 
         callButton.addEventListener('click', () => {
             const peerId = peerIdInput.value;
-            if (peerId) {
-                getLocalStream()
-                    .then(stream => {
-                        const call = peer.call(peerId, stream);
-                        call.on('stream', remoteStream => {
-                            addRemoteVideo(peerId, remoteStream);
-                        });
-                    })
-                    .catch(err => console.error('Failed to get local stream', err));
+            if (!peerId) {
+                alert('Veuillez entrer l\'ID de la personne à appeler.');
+                return;
             }
+
+            getLocalStream()
+                .then((stream) => {
+                    call = peer.call(peerId, stream);
+                    call.on('stream', (remoteStream) => {
+                        addRemoteVideo(peerId, remoteStream);
+                    });
+                })
+                .catch((err) => {
+                    console.error('Failed to get local stream', err);
+                });
         });
 
         hangupButton.addEventListener('click', () => {
             if (call) {
                 call.close();
+                call = null;
             }
-            videoContainer.innerHTML = '';
-            peerConnections = {};
         });
 
         muteCheckbox.addEventListener('change', () => {
@@ -378,10 +379,11 @@
             sendMuteSignal(muteRemoteCheckbox.checked);
         });
 
-        cameraSelect.addEventListener('change', async () => {
+        cameraSelect.addEventListener('change', () => {
             localStorage.setItem('selectedCameraId', cameraSelect.value);
-            await getLocalStream();
+            getLocalStream();
         });
+
     </script>
 </body>
 </html>
