--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -23,7 +23,7 @@
             margin-bottom: 20px;
         }
         video {
-          max-width: 300px;
+            max-width: 300px;
             border: 1px solid #ccc;
             border-radius: 5px;
             margin: 5px;
@@ -54,7 +54,7 @@
     <div id="video-container">
         <div class="video-wrapper" id="local-wrapper">
             <video id="localVideo" autoplay playsinline muted></video>
-            <div class="controls">     
+            <div class="controls">
                 <button class="unlike-button" style="display: none;">⚡</button>
                 <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
             </div>
@@ -82,7 +82,6 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -170,7 +169,6 @@
                             unlikedUsers[senderId]++;
                         }
                         updateUnlikesCount(senderId);
-
                     }
                 });
             });
@@ -266,90 +264,116 @@
         }
 
         function sendMuteSignal(mute) {
-            if (call) {
-                call.peerConnection.getSenders().forEach(sender => {
-                    if (sender.track && sender.track.kind === 'audio') {
-                        sender.track.enabled = !mute;
-                    }
+            Object.values(peer.connections).forEach(connections => {
+                connections.forEach(conn => {
+                    conn.send({ type: 'mute', mute });
+                });
+            });
+        }
+
+        function addRemoteVideo(peerId, stream) {
+            if (peerConnections[peerId]) {
+                return;
+            }
+
+            const videoElement = document.createElement('video');
+            videoElement.srcObject = stream;
+            videoElement.autoplay = true;
+            videoElement.playsinline = true;
+            videoElement.id = `remote-${peerId}`;
+            videoElement.className = 'remote-video';
+
+            const videoWrapper = document.createElement('div');
+            videoWrapper.className = 'video-wrapper';
+            videoWrapper.appendChild(videoElement);
+
+            const controlsDiv = document.createElement('div');
+            controlsDiv.className = 'controls';
+
+            const likeButton = document.createElement('button');
+            likeButton.innerText = '❤️';
+            likeButton.className = 'like-button';
+            likeButton.addEventListener('click', () => {
+                sendSignal(peerId, 'like');
+            });
+
+            const unlikeButton = document.createElement('button');
+            unlikeButton.innerText = '⚡';
+            unlikeButton.className = 'unlike-button';
+            unlikeButton.addEventListener('click', () => {
+                sendSignal(peerId, 'unlike');
+            });
+
+            const likeCount = document.createElement('p');
+            likeCount.className = 'likes-count';
+            likeCount.innerText = 'Likes reçus: 0';
+
+            const unlikeCount = document.createElement('p');
+            unlikeCount.className = 'unlikes-count';
+            unlikeCount.innerText = 'Unlikes reçus: 0';
+
+            controlsDiv.appendChild(likeButton);
+            controlsDiv.appendChild(unlikeButton);
+            controlsDiv.appendChild(likeCount);
+            controlsDiv.appendChild(unlikeCount);
+
+            videoWrapper.appendChild(controlsDiv);
+            videoContainer.appendChild(videoWrapper);
+
+            peerConnections[peerId] = {
+                stream,
+                videoElement,
+                controlsDiv,
+                likeCount,
+                unlikeCount
+            };
+        }
+
+        function removeRemoteVideo(peerId) {
+            const videoWrapper = document.querySelector(`#remote-${peerId}`);
+            if (videoWrapper) {
+                videoWrapper.parentElement.removeChild(videoWrapper);
+                delete peerConnections[peerId];
+            }
+        }
+
+        function sendSignal(peerId, type) {
+            const conn = peer.connections[peerId][0];
+            if (conn) {
+                conn.send({ type });
+            }
+        }
+
+        function updateLikesCount(peerId) {
+            const connection = peerConnections[peerId];
+            if (connection) {
+                connection.likeCount.innerText = `Likes reçus: ${likedUsers[peerId] || 0}`;
+            }
+        }
+
+        function updateUnlikesCount(peerId) {
+            const connection = peerConnections[peerId];
+            if (connection) {
+                connection.unlikeCount.innerText = `Unlikes reçus: ${unlikedUsers[peerId] || 0}`;
+            }
+        }
+
+        function handleTextBoxInput(e) {
+            if (e.target.value === '!unlike') {
+                document.querySelectorAll('.unlike-button').forEach(button => {
+                    button.style.display = 'block';
+                });
+            } else {
+                document.querySelectorAll('.unlike-button').forEach(button => {
+                    button.style.display = 'none';
                 });
             }
         }
 
-        function addRemoteVideo(peerId, stream) {
-            let videoWrapper = document.getElementById(`video-${peerId}`);
-            if (!videoWrapper) {
-                videoWrapper = document.createElement('div');
-                videoWrapper.id = `video-${peerId}`;
-                videoWrapper.className = 'video-wrapper';
-                const videoElement = document.createElement('video');
-                videoElement.id = `video-${peerId}`;
-                videoElement.autoplay = true;
-                videoElement.playsinline = true;
-                videoWrapper.appendChild(videoElement);
-
-                const controlsDiv = document.createElement('div');
-                controlsDiv.className = 'controls';
-                controlsDiv.innerHTML = `
-                    <button class="like-button">❤️</button>
-                    <button class="unlike-button" style="display: none;">⚡</button>
-                    <p class="likes-count">Likes reçus: 0</p>
-                    <p class="unlikes-count" style="display: none;">Unlikes reçus: 0</p>
-                `;
-                videoWrapper.appendChild(controlsDiv);
-                videoContainer.appendChild(videoWrapper);
-                videoElement.srcObject = stream;
-            }
-        }
-
-        callButton.addEventListener('click', () => {
-            const peerId = peerIdInput.value;
-            if (peerId) {
-                getLocalStream()
-                    .then((stream) => {
-                        localStream = stream;
-                        localVideo.srcObject = stream;
-                        const constraints = {
-                            audio: true,
-                            video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-                        };
-                        const callOptions = {
-                            audio: true,
-                            video: constraints.video
-                        };
-                        call = peer.call(peerId, stream, callOptions);
-                        call.on('stream', (remoteStream) => {
-                            addRemoteVideo(peerId, remoteStream);
-                            lastCallerId = peerId;
-                            peerIdInput.value = lastCallerId;
-                        });
-                    })
-                    .catch((err) => {
-                        console.error('Failed to get local stream', err);
-                    });
-            }
-        });
-
-        hangupButton.addEventListener('click', () => {
-            if (call) {
-                call.close();
-                call = null;
-            }
-            document.querySelectorAll('.video-wrapper').forEach(wrapper => {
-                wrapper.remove();
-            });
-        });
-
-        muteCheckbox.addEventListener('change', () => {
-            applyMicMute();
-        });
-
-        muteRemoteCheckbox.addEventListener('change', () => {
-            sendMuteSignal(muteRemoteCheckbox.checked);
-        });
+        document.querySelector('#peerId').addEventListener('input', handleTextBoxInput);
 
         cameraSelect.addEventListener('change', () => {
-            const selectedCameraId = cameraSelect.value;
-            localStorage.setItem('selectedCameraId', selectedCameraId);
+            localStorage.setItem('selectedCameraId', cameraSelect.value);
             getLocalStream();
         });
     </script>
